@@ -6,7 +6,7 @@
 		<meta http-equiv="Content-Type" content="text/html;charset=iso-8859-1">
 		<meta name="GENERATOR" content="Mozilla/4.76 [en] (X11; U; Linux 2.2.16-22 i586) [Netscape]">
 		<title>Generic NMEA GPS Receiver</title>
-		<link href="scripts/style.css" type="text/css" rel="stylesheet">
+		<link href="file://///Whimsy/whimsy/ntp-html/to-dlm/drivers/scripts/style.css" type="text/css" rel="stylesheet">
 	</head>
 
 	<body>
